syntax = "proto3";
package user;
option go_package = "gim/pkg/protocol/pb/userpb";

import "google/protobuf/empty.proto";
import "user/user.ext.proto";

service UserIntService {
  // 权限校验
  rpc Auth (AuthRequest) returns (google.protobuf.Empty);
  // 批量获取用户信息
  rpc GetUser (GetUserRequest) returns (GetUserReply);
  // 批量获取用户信息
  rpc GetUsers (GetUsersRequest) returns (GetUsersReply);
}

message AuthRequest {
  uint64 user_id = 1;
  uint64 device_id = 2;
  string token = 3;
}

message GetUsersRequest {
  map<uint64, int32> user_ids = 1; // 用户id
}
message GetUsersReply {
  map<uint64, User> users = 1; // 用户信息
}
